# nonlinear_solver

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  setup.py
Newton/: Makefile  incrementations_methods.c  launch_vnr_resolution.c  launch_vnr_resolution.h  launch_vnr_resolution.i  main.c  miegruneisen.c  miegruneisen.h  newton.c  newton.h  newton.h.gch  quadratic_function.h  setup.py  stop_criterions.c  stop_criterions.h  swig_vs_numpy_comparison.py  test  test_of_swig_and_numpy.ipynb  utils.c  utils.h  vnr_internalenergy_evolution.c  vnr_internalenergy_evolution.h
Newton/src/: CMakeLists.txt  Makefile  test_solver.c  test_solver_perfs.c
Newton/src/array/: CMakeLists.txt  array.c  array.h  test_array.c
Newton/src/criterions/: CMakeLists.txt  stop_criterions.c  stop_criterions.h  test_stop_criterions.c
Newton/src/eos/: CMakeLists.txt  miegruneisen.c  miegruneisen.h  test_miegruneisen.c
Newton/src/functions/: CMakeLists.txt  quadratic_function.c  quadratic_function.h  vnr_internalenergy_evolution.c  vnr_internalenergy_evolution.h
Newton/src/incrementation/: CMakeLists.txt  incrementations_methods.c  incrementations_methods.h  test_incrementation_methods.c
Newton/src/launch_vnr_resolution/: BuildPythonModule.cmake  CMakeLists.txt  launch_vnr_resolution.c  launch_vnr_resolution.h  launch_vnr_resolution.i  setup.py
Newton/src/newton/: CMakeLists.txt  newton.c  newton.h
Newton/src/test_utils/: CMakeLists.txt  test_utils.h
Newton/src/utils/: CMakeLists.txt  utils.c  utils.h
Newton/tools/: build_swig_module.sh
doc/: swig_vs_numpy_comparison.sh
src/: .clang-format  CMakeLists.txt  solve_cubic.c  test_solver.c  test_solver_perfs.c  test_solver_perfs.h.in
src/array/: array.h
src/criterions/: CMakeLists.txt  stop_criterions.c  stop_criterions.h  test_stop_criterions.c
src/eos/: CMakeLists.txt  miegruneisen.c  miegruneisen.h  miegruneisen_params.h  test_miegruneisen.c
src/functions/: CMakeLists.txt  cubic.c  cubic.h  vnr_internalenergy_evolution.c  vnr_internalenergy_evolution.h
src/incrementation/: incrementations_methods.h  test_incrementation_methods.c
src/launch_vnr_resolution/: BuildPythonModule.cmake  CMakeLists.txt  launch_vnr_resolution.c  launch_vnr_resolution.h  launch_vnr_resolution.i
src/launch_vnr_resolution_c/: CMakeLists.txt  PythonUtilities.cmake  __init__.py  launch_vnr_resolution.i
src/newton/: newton.c  newton.h
src/python_extension/: CMakeLists.txt
src/test_utils/: CMakeLists.txt  test_utils.h
